--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/user_service
 spring.datasource.username=root
 spring.datasource.password=root1234
-spring.jpa.hibernate.ddl-auto= update
+# spring.jpa.hibernate.ddl-auto= create
