Added euraka client config

--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url= jdbc:mysql://localhost:3306/user_service
 spring.datasource.username=root
 spring.datasource.password=root1234
 # spring.jpa.hibernate.ddl-auto= create
+eureka.client.service-url.defaultZone= http://rick:rick123@localhost:8010/eureka
