--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,5 +1,8 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/user_service
 spring.datasource.username=root
 spring.datasource.password=root1234
-# spring.jpa.hibernate.ddl-auto= create
-eureka.client.service-url.defaultZone= http://rick:rick123@localhost:8010/eureka
+spring.jpa.hibernate.ddl-auto= update
+
+spring.eureka.name = rick
+spring.eureka.password= rick123
+eureka.client.service-url.defaultZone= http://${spring.eureka.name}:${spring.eureka.password}@localhost:8010/eureka
