--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,5 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/user_service
+spring.datasource.host= localhost
+spring.datasource.url= jdbc:mysql://${spring.datasource.host}:3306/user_service
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.hibernate.ddl-auto= update
