use hard coded port for user service 8044

--- a/user-service-dev.properties
+++ b/user-service-dev.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:0}
+server.port=8044
 spring.devtools.restart.enabled=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id= ${spring.application.name}:${spring.application.insance_id:${random.value}}
